--- a/frontend/app/styles/ghdata-shared.styl
+++ b/frontend/app/styles/ghdata-shared.styl
@@ -54,8 +54,23 @@ section.unmaterialized
   border-right: 1px solid (background - 5%)
   border-bottom: 1px solid (background - 5%)
 
-.hidden
-  display: none !important
+cite.metric
+  display:none;
+  width:100%
+  height: 0
+  float:right
+  text-align: center;
+  font-size: 12px
+  color: #ccc
+  font-style: normal
+  padding-left: 50px
+  margin: 200px 0px -185px 0
+
+cite.metric a
+  color: #aaa
+
+.linechart
+  margin-bottom: 30px
 
 @media print
   body
@@ -70,3 +85,6 @@ section.unmaterialized
 
 #comparison-form-template
   display: none
+
+.hidden, .hidden > *, .hidden > small
+  display: none !important 
