--- a/frontend/app/styles/ghdata-shared.styl
+++ b/frontend/app/styles/ghdata-shared.styl
@@ -64,12 +64,14 @@ section.unmaterialized
   background: (foreground - 4%)
   border-right: 1px solid (background - 5%)
   border-bottom: 1px solid (background - 5%)
+  margin-bottom: 20px
 
 .fixed
   position: relative
 
 @media (min-width: 1230px)
   #cards
+    padding-bottom: 100px
     position: relative
     z-index: 9
   
