Fix frontend (fixes #50, fixes #56)

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -100,7 +100,7 @@ section.unmaterialized
     float: left
 
 cite.metric
-  display: none;
+  display: block;
   width:100%
   height: 0
   float: right
@@ -113,6 +113,7 @@ cite.metric
 
 cite.metric a
   color: #aaa
+  text-decoration: underline;
 
 .linechart
   height: 210px
