--- a/frontend/public/app.css
+++ b/frontend/public/app.css
@@ -2656,7 +2656,7 @@ section.unmaterialized {
   }
 }
 cite.metric {
-  display: none;
+  display: block;
   width: 100%;
   height: 0;
   float: right;
@@ -2669,6 +2669,7 @@ cite.metric {
 }
 cite.metric a {
   color: #aaa;
+  text-decoration: underline;
 }
 .linechart {
   height: 210px;
