--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -142,6 +142,10 @@ cite.metric a
   line-height: 10
   animation: outro 1s, loader 1.5s infinite
 
+.button.download
+  margin: 20px 0px 20px 5px
+  padding: 5px 10px 5px 10px
+
 @keyframes outro
   0%
     opacity: 1
@@ -185,3 +189,4 @@ cite.metric a
 
 .hidden, .hidden > *, .hidden > small
   display: none !important 
+
