--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -99,23 +99,44 @@ section.unmaterialized
     width: 325px
     float: left
 
+.below-chart
+  position: relative
+  z-index: 2
+  width: 100%;
+  margin: -50px 0 60px 0;
+
 cite.metric
   display: block;
   width:100%
   height: 0
-  float: right
-  text-align: center;
+  margin-left: 52px;
+  float: left
+  text-align: left;
   font-size: 12px
   color: #ccc
   font-style: normal
-  padding-left: 50px
-  margin: 200px 0px -185px 0
 
 cite.metric a
   color: #aaa
   text-decoration: underline;
+  
+.graph-download
+  background: 0
+  color: #ccc
+  font-size: 0.7em
+  height: 5px !important
+  line-height: 0
+  float: right
+  margin: -7px 7px 0 0 !important;
+  padding: 3px !important;
+  
+.graph-download:hover
+  background: #eee;
+  color: #000
 
 .linechart
+  position: relative
+  z-index: 1
   height: 210px
   margin-bottom: 30px
 
@@ -129,8 +150,8 @@ cite.metric a
   height: 0
   top: 31px
   left: 55px
-  fontSize: 14px
-  fontWeight: bold
+  font-size: 14px
+  font-weight: bold
   opacity: 0.8
 
 .mg-baselines
@@ -142,9 +163,7 @@ cite.metric a
   line-height: 10
   animation: outro 1s, loader 1.5s infinite
 
-.button.download
-  margin: 20px 0px 20px 5px
-  padding: 5px 10px 5px 10px
+
 
 @keyframes outro
   0%
