Add JSON downloads, add foundation of batch requests

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -125,7 +125,7 @@ cite.metric a
   color: #ccc
   font-size: 0.7em
   height: 5px !important
-  line-height: 0
+  line-height: 30px;
   float: right
   margin: -7px 7px 0 0 !important;
   padding: 3px !important;
