--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -30,6 +30,7 @@ section#landing h1
   font-size: 25px
 
 section
+  width: 100%;
   padding: 36px
   float: right
   margin: 0 0 24px 0
@@ -73,14 +74,13 @@ section.unmaterialized
 
 @media (min-width: 1230px)
   #cards
+    width: 100%;
     padding-bottom: 100px
     position: relative
     z-index: 9
   
   section
     z-index: 10
-    width: calc(100% - 345px);
-    float: right;
   
   #landing
     width:100%
@@ -94,10 +94,6 @@ section.unmaterialized
   .fixed
     position: fixed !important
     top: 25px
-    
-  #controls
-    width: 325px
-    float: left
 
 .below-chart
   position: relative
@@ -209,4 +205,8 @@ cite.metric a
 
 .hidden, .hidden > *, .hidden > small
   display: none !important 
+
+.invis, .invis > *, .invis > small
+  z-index: -1;
+  opacity: 0 !important;
 
