Add BubbleChart.vue, Improve Contributors query performance

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -136,6 +136,19 @@ cite.metric a
   height: 210px
   margin-bottom: 30px
 
+.role-title > text
+  font-size: 20px !important
+  font-weight: normal !important
+
+.bubblechart
+  width: 100%;
+
+.bubblechart *
+  overflow: visible !important;
+
+.bubblechart svg
+  width: 100%;
+
 .mg-line-legend
   display: none
 
