added stacked bar chart viz & new metric
implemented a stacked bar chart viz using Vega-lite, and added a new
metric (issues/activity) to be displayed using this new viz

--- a/frontend/public/app.css
+++ b/frontend/public/app.css
@@ -2702,6 +2702,11 @@ cite.metric a {
 .bubblechart * {
   overflow: visible !important;
 }
+.stackedbarchart * {
+  overflow: visible !important;
+  width: 100%;
+  margin-bottom: 30px;
+}
 .bubblechart svg {
   width: 100%;
 }
