timeseries/community_engagement endpoint

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -95,6 +95,12 @@ section.unmaterialized
     position: fixed !important
     top: 25px
 
+.warn
+  color: #f00
+
+.warn:before
+  content: ' ⚠ '
+
 .below-chart
   position: relative
   z-index: 2
