--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -152,12 +152,19 @@ cite.metric a
 .bubblechart *
   overflow: visible !important;
 
+// .stackedbarchart
+
+.stackedbarchart *
+  overflow: visible !important;
+  width: 100%;
+  // position: relative
+  margin-bottom: 30px
+
 .bubblechart svg
   width: 100%;
 
 .mg-line-legend
   display: none
-
 
 .legend 
   position: relative
