--- a/frontend/public/app.css
+++ b/frontend/public/app.css
@@ -2708,6 +2708,11 @@ cite.metric a {
 .bubblechart * {
   overflow: visible !important;
 }
+.stackedbarchart * {
+  overflow: visible !important;
+  width: 100%;
+  margin-bottom: 30px;
+}
 .bubblechart svg {
   width: 100%;
 }
