Add tabs to frontend, batching to AugurAPI.js, update README

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -25,6 +25,15 @@ header .search
   margin: auto
   width: 95%
   max-width: 1080px
+  
+.tabs li.a
+  
+
+.tabs li.active a
+  color: #000
+  background: #eaeaea
+  border-bottom: 1px solid #eaeaea
+  
 
 section#landing h1
   font-size: 25px
