--- a/frontend/public/app.css
+++ b/frontend/public/app.css
@@ -2581,6 +2581,12 @@ header .search {
   width: 95%;
   max-width: 1080px;
 }
+.tabs li.a,
+.tabs li.active a {
+  color: #000;
+  background: #eaeaea;
+  border-bottom: 1px solid #eaeaea;
+}
 section#landing h1 {
   font-size: 25px;
 }
