First git metric implemented end-to-end, performance improvements

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -8,26 +8,24 @@ body
 
 header
   width: 100%
-  min-height: 216px
-  padding: 48px
-  margin-bottom: 24px
+  min-height: 50px
+  padding: 20px
+  margin-bottom: 20px
   background: foreground
 
 header .search
-  margin-top: 48px
+  width: 100%
+  margin-top: 25px
   
 #logo
-  display:block
-  margin: 0 auto
-  max-width: 400px
+  display: inline-block
+  margin-top: 0px
+  max-width: 250px
   
 .content
   margin: auto
   width: 95%
   max-width: 1080px
-  
-.tabs li.a
-  
 
 .tabs li.active a
   color: #000
