--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -79,6 +79,11 @@ section.unmaterialized
 .fixed
   position: relative
 
+section.status
+  box-shadow: 0 0 0 0
+  background: (foreground - 4%)
+  padding: 24px 24px 48px 24px
+
 @media (min-width: 1230px)
   #cards
     width: 100%;
