--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -16,6 +16,17 @@ header
 header .search
   width: 100%
   margin-top: 25px
+
+.header-nav
+  margin-top: 25px
+  display: block
+
+.header-nav-item
+  padding: 10px 10px
+  display: inline-block
+  float: right
+  text-decoration: none
+  color: #777
   
 #logo
   display: inline-block
