prepare for merge

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -70,7 +70,7 @@ section.unmaterialized
   border-bottom: 1px solid (background - 5%)
 
 #controls
-  padding: 36px
+  padding: 28px 36px 0px 36px
   background: (foreground - 4%)
   border-right: 1px solid (background - 5%)
   border-bottom: 1px solid (background - 5%)
@@ -112,7 +112,7 @@ section.unmaterialized
   position: relative
   z-index: 2
   width: 100%;
-  margin: -50px 0 60px 0;
+  margin: -10px 0 30px 0;
 
 cite.metric
   display: block;
@@ -146,8 +146,11 @@ cite.metric a
 .linechart
   position: relative
   z-index: 1
-  height: 210px
-  margin-bottom: 30px
+  height: 300px
+  margin-bottom: 60px
+
+.marks
+  padding: 10px 0px 0px 0px !important
 
 .role-title > text
   font-size: 20px !important
