--- a/frontend/public/app.css
+++ b/frontend/public/app.css
@@ -2624,7 +2624,7 @@ section.unmaterialized {
   border-bottom: 1px solid #dedede;
 }
 #controls {
-  padding: 36px;
+  padding: 28px 36px 0px 36px;
   background: #f0f0f0;
   border-right: 1px solid #dedede;
   border-bottom: 1px solid #dedede;
@@ -2667,7 +2667,7 @@ section.unmaterialized {
   position: relative;
   z-index: 2;
   width: 100%;
-  margin: -50px 0 60px 0;
+  margin: -10px 0 30px 0;
 }
 cite.metric {
   display: block;
@@ -2701,8 +2701,11 @@ cite.metric a {
 .linechart {
   position: relative;
   z-index: 1;
-  height: 210px;
-  margin-bottom: 30px;
+  height: 300px;
+  margin-bottom: 60px;
+}
+.marks {
+  padding: 10px 0px 0px 0px !important;
 }
 .role-title > text {
   font-size: 20px !important;
