updated error message

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -162,15 +162,15 @@ cite.metric a
 
 .error
   justify-content: center
-  padding: 41px 0px 41px 60px
+  padding: 30px 0px 31px 20px
   text-align: center
   margin: auto
 
-.error:after
+.error:before
   content: "\26A0"
   font-size: 3em;
   justify-content: center
-  padding: 50px 50px 50px 0px
+  padding: 50px 50px 50px 50px
   text-align: center
   margin: auto
 
@@ -297,3 +297,5 @@ cite.metric a
   opacity: 0 !important;
   max-height: 81px !important;
 
+.shrunk
+  max-height: 0px !important
