--- a/frontend/public/app.css
+++ b/frontend/public/app.css
@@ -2716,15 +2716,15 @@ cite.metric a {
 }
 .error {
   justify-content: center;
-  padding: 41px 0px 41px 60px;
+  padding: 30px 0px 31px 20px;
   text-align: center;
   margin: auto;
 }
-.error:after {
+.error:before {
   content: "\26A0";
   font-size: 3em;
   justify-content: center;
-  padding: 50px 50px 50px 0px;
+  padding: 50px 50px 50px 50px;
   text-align: center;
   margin: auto;
 }
@@ -2816,6 +2816,9 @@ cite.metric a {
   z-index: -1;
   opacity: 0 !important;
   max-height: 81px !important;
+}
+.shrunk {
+  max-height: 0px !important;
 }
 @-moz-keyframes spin {
   0% {
