--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -174,6 +174,9 @@ cite.metric a
   text-align: center
   margin: auto
 
+#optionheader
+  font-size: 1.1em;
+  font-weigth: 600
 
 .marks
   padding: 10px 0px 0px 0px !important
