Add months to Facade integration

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -37,7 +37,7 @@ header .search
 .content
   margin: auto
   width: 95%
-  max-width: 1080px
+  max-width: 1200px
 
 .tabs li.active a
   color: #000
@@ -302,3 +302,11 @@ cite.metric a
 
 .shrunk
   max-height: 0px !important
+
+.lines-of-code-table th, .lines-of-code-table td
+  padding: 0.5rem
+  
+.clickable-header
+  cursor: pointer
+  text-decoration: underline
+  color: #3794de
