config options update, added compared repo bar to before collapse

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -82,11 +82,14 @@ section.unmaterialized
   border-bottom: 1px solid (background - 5%)
 
 #controls
-  padding: 28px 36px 0px 36px
+  padding: 18px 36px 5px 36px
   background: (foreground - 4%)
   border-right: 1px solid (background - 5%)
   border-bottom: 1px solid (background - 5%)
   margin-bottom: 20px
+
+#comparetext
+  padding: 10px 0px 0px 0px
 
 .fixed
   position: relative
@@ -129,7 +132,8 @@ section.status
   position: relative
   z-index: 2
   width: 100%;
-  margin: -10px 0 30px 0;
+  margin: -10px 0px 30px 0px;
+  padding: 0px 25px 0px 25px
 
 cite.metric
   display: block;
@@ -178,6 +182,9 @@ cite.metric a
   font-size: 1.1em;
   font-weigth: 600
 
+.comparesearch
+  padding-bottom: 100px
+
 .marks
   padding: 10px 0px 0px 0px !important
 
@@ -220,8 +227,11 @@ cite.metric a
   opacity: 0.5
 
 #collapse {
-  padding: 0px 0px 20px 0px
+  padding: 10px 0px 0px 0px
 }
+
+.linechart
+  padding: 0px 0px 0px 38px
 
 .loader {
   width: 100%
@@ -305,7 +315,7 @@ cite.metric a
 
 .lines-of-code-table th, .lines-of-code-table td
   padding: 0.5rem
-  
+
 .clickable-header
   cursor: pointer
   text-decoration: underline
