removed fade problem

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -146,7 +146,7 @@ section.status
   max-height:0;
 }
 
-.collapsible::after {
+.collapsible.fade::after {
             content: '';
             position: absolute;
             bottom: 0;
