--- a/frontend/public/app.css
+++ b/frontend/public/app.css
@@ -2699,7 +2699,7 @@ section.status {
 .section.collapsed {
   max-height: 0;
 }
-.collapsible::after {
+.collapsible.fade::after {
   content: '';
   position: absolute;
   bottom: 0;
