Add support for multiple Facade projects

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -173,9 +173,17 @@ section.status
             );
         }
 
-.section.showsome {
+.section.showsome
   max-height: 100px
-}
+
+.repo-link-holder
+  background: rgb(234, 234, 234)
+  padding: 10px
+  height: 300px
+  overflow-y: scroll
+
+.repo-link-table-body
+  background: rgb(234, 234, 234)
 
 th, td {
     padding: 0;
