fixed frontend formatting: bubblechart width, smaller triangle for dl git repos, dynamic row-below chart padding with/ w/o detail

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -355,12 +355,17 @@ cite.metric a
   display: none !important
 
 .spacing
-  height: 81px
+  height: 96px
 
 .invis, .invis > *, .invis > small
   z-index: -1;
   opacity: 0 !important;
-  max-height: 81px !important;
+  max-height: 116px !important;
+
+.invisDet, .invisDet > *, .invisDet > small
+  z-index: -1;
+  opacity: 0 !important;
+  max-height: 221px !important;
 
 .shrunk
   max-height: 0px !important
