--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -296,8 +296,8 @@ cite.metric a
   top: 50%;
   transform: translateY(-50%);
 
-  border: 16px solid #FF3647; /* our red */
-  border-top: 16px solid #4736FF; /* our Blue */
+  border: 16px solid #7d7d7d; /* our red */
+  border-top: 16px solid #FF3647; /* our gray */
   border-radius: 50%;
   opacity: 0.7
   width: 120px;
